<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.adleritech.webo</groupId>
	<artifactId>ride-sharing</artifactId>
	<packaging>war</packaging>
	<version>1.0-SNAPSHOT</version>
	<name>Liftago Ride Sharing</name>

	<properties>
		<java.version>1.7</java.version>
	</properties>

	<scm>
		<url>https://github.com/adleritech/ridesharing</url>
		<connection>scm:git:git@github.com:adleritech/ridesharing.git</connection>
		<developerConnection>scm:git:git@github.com:adleritech/ridesharing.git</developerConnection>
	</scm>

	<distributionManagement>
		<repository>
			<id>deployment.release</id>
			<name>Releases</name>
			<url>http://adl-ci.jelastic.dogado.eu/nexus/content/repositories/adler-itech</url>
		</repository>
		<snapshotRepository>
			<id>deployment.snap</id>
			<name>Snapshots</name>
			<url>http://adl-ci.jelastic.dogado.eu/nexus/content/repositories/adler-itech-snapshots</url>
		</snapshotRepository>
	</distributionManagement>

	<repositories>
		<repository>
			<id>Adleritech Central</id>
			<url>http://adl-ci.jelastic.dogado.eu/nexus/content/groups/adleritech-central</url>
			<snapshots>
				<checksumPolicy>ignore</checksumPolicy>
				<enabled>true</enabled>
				<updatePolicy>always</updatePolicy>
			</snapshots>
			<releases>
				<enabled>true</enabled>
				<checksumPolicy>warn</checksumPolicy>
				<updatePolicy>never</updatePolicy>
			</releases>
		</repository>
	</repositories>

	<build>
		<plugins>
<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <compilerVersion>${java.version}</compilerVersion>
                    <fork>true</fork>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.3</version>
				<configuration>
					<webXml>webapp/WEB-INF/web.xml</webXml>
					<webResources>
						<resource>
							<directory>dist/public</directory>
						</resource>
					</webResources>
				</configuration>
			</plugin>
<plugin>
    <artifactId>maven-clean-plugin</artifactId>
    <version>2.5</version>
    <configuration>
      <filesets>
        <fileset>
          <directory>dist</directory>
          <includes>
            <include>**/*</include>
          </includes>
          <followSymlinks>false</followSymlinks>
        </fileset>
	<fileset>
          <directory>target-grunt</directory>
          <includes>
            <include>**/*</include>
          </includes>
          <followSymlinks>false</followSymlinks>
        </fileset>
	<fileset>
          <directory>node_modules</directory>
          <includes>
            <include>**/*</include>
          </includes>
          <followSymlinks>false</followSymlinks>
        </fileset>
	<fileset>
          <directory>client/bower-components</directory>
          <includes>
            <include>**/*</include>
          </includes>
          <followSymlinks>false</followSymlinks>
        </fileset>
      </filesets>
    </configuration>
  </plugin>
			<plugin>
				<groupId>pl.allegro</groupId>
				<artifactId>grunt-maven-plugin</artifactId>
				<version>1.3.2</version>
				<configuration>
                    <target>release</target>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>create-resources</goal>
							<goal>npm</goal>
							<!-- or npm-offline if npm failure is not an option -->
							<!-- <goal>bower</goal> -->
							<goal>grunt</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- <plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.3.1</version>
				<inherited>false</inherited>
				<executions>
					<execution>
						<phase>generate-sources</phase>
						<goals>
							<goal>exec</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<executable>grunt</executable>
					<arguments>
						<argument>build</argument>
					</arguments>
				</configuration>
			</plugin> -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.3.1</version>
				<inherited>false</inherited>
				<executions>
					<execution>
						<id>npmcache</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>
							<executable>npm</executable>
							<arguments>
								<argument>cache</argument>
								<argument>clean</argument>
							</arguments>
						</configuration>
					</execution>
					<execution>
						<id>npm</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>
							<executable>npm</executable>
							<arguments>
								<argument>install</argument>
							</arguments>
						</configuration>
					</execution>
					<execution>
						<id>gifsicle</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>
							<executable>npm</executable>
							<arguments>
								<argument>install</argument>
								<argument>imagemin-gifsicle</argument>
							</arguments>
						</configuration>
					</execution>
					<execution>
						<id>bower</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>
							<executable>bower</executable>
							<arguments>
								<argument>install</argument>
							</arguments>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
                <groupId>org.apache.tomcat.maven</groupId>
                <artifactId>tomcat7-maven-plugin</artifactId>
                <version>2.2</version>
                <configuration>
                    <!--<tomcatUsers>tomcat-users.xml</tomcatUsers>-->
                    <systemProperties>
                        <JAVA_OPTS>-Xms256m -Xmx512m -XX:MaxPermSize=256m</JAVA_OPTS>
                    </systemProperties>
                </configuration>
            </plugin>
		</plugins>
	</build>

	<dependencies>
	<!--	<dependency>
                    <groupId>com.jelastic</groupId>
                    <artifactId>jelastic-public-j2se</artifactId>
                    <version>2.2</version>
                </dependency> -->
	</dependencies>
</project>

